# data-analysis-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.celery.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  context_summary.py  harness.py  llm_config_store.py  llm_runtime.py
datasource/: __init__.py  base.py  factory.py  file_datasource.py  registry.py  sqlalchemy_datasource.py
demo/: README.md  ecommerce_demo.sql  ecommerce_orders_demo.csv
docs/: api.md  architecture.md  commands.md  demo.md  deployment.md  events.md  frontend_flow.md  local_run.md  release_checklist.md  release_notes_v0.1.0.md  release_notes_v0.2.0-alpha.md  third_party_notices.md
evals/: README.md  metrics.py  runner.py
graphs/: __init__.py  _skeleton.py  analysis_graph.py  context_manager_graph.py  open_exploration_graph.py  report_graph.py  schema_qa_graph.py
guards/: __init__.py  cancel_policy.py  output_tool_guard.py  retry_policy.py  sql_guard.py  timeout_policy.py
llm/: __init__.py  base.py  config.py  errors.py  fake.py  json_utils.py  openai_compatible.py  prompt_loader.py
mcp/: __init__.py  adapter.py  config.py  errors.py  manager.py  transport.py
nodes/: __init__.py  chart_nodes.py  context_nodes.py  execution_nodes.py  exploration_nodes.py  final_nodes.py  insight_nodes.py  llm_strategy.py  memory_nodes.py  planning_nodes.py  report_nodes.py  result_check_nodes.py  router.py  runtime.py  schema_qa_nodes.py  sql_nodes.py
persistence/: __init__.py  file_artifact_store.py  interfaces.py  memory_artifacts.py  (+8 more)
(+237 files in other folders)
