[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "data-analysis-agent-langgraph"
version = "0.2.0a0"
description = "LangGraph rewrite skeleton for a structured data analysis agent."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
dependencies = [
    "celery[redis]>=5.4,<6.0",
    "fastapi>=0.115,<1.0",
    "langgraph>=1.1,<2.0",
    "openpyxl>=3.1,<4.0",
    "pydantic>=2.10,<3.0",
    "python-pptx>=1.0,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-multipart>=0.0.20,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "sqlglot>=26.0,<27.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.15,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "app",
    "graphs",
    "nodes",
    "schemas",
    "tools",
    "persistence",
    "guards",
    "datasource",
    "llm",
    "mcp",
    "evals",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
